Fixed text size responsiveness. Moved about game button on engine page. Fixed gif alignment on index page for small screens.

--- a/css/gameengineStyle.css
+++ b/css/gameengineStyle.css
@@ -5,26 +5,13 @@ video
     height: 26em;
 }
 
-.mainText
-{
-	 font-size: 1.6em;
-}
-
 #dropBtn
 {
 	background: black;
 	color: white;
 	font-size: 1.4em;
-}
-
-#dropText
-{
-	font-size: 1.4em;
-}
-
-#dropBtn
-{
 	transition: background-color 0.3s;
+	margin-left: 1.5em;
 }
 
 #dropBtn:hover
@@ -33,6 +20,11 @@ video
     color: black;
     transition: color 0.5s;
 	transition: background-color 0.5s;
+}
+
+#dropText
+{
+	font-size: 1.4em;
 }
 
 @media only screen and (min-width: 300px) and (max-width: 750px)
@@ -56,12 +48,6 @@ video
         width: 18em;
         height: 10em;
     }
-    
-    #dlText
-    {
-        font-size: 12pt;
-        width: 100%;
-    }
 }
 
 @media only screen and (min-width: 751px) and (max-width: 1200px)
@@ -71,4 +57,13 @@ video
         width: 30em;
         height: 20em;
     }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 750px)
+{
+	#dropText
+	{
+		font-size: 1em;
+	}
+
 }
